--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
     <img src="bs1.jpg" alt="Ảnh chân dung Lê Bá Sơn">
     <h1>LÊ BÁ SƠN</h1>
     <p>Sinh viên ngành Công nghệ Vật lý điện tử và Tin học</p>
+    <a class="weatherwidget-io" href="https://forecast7.com/en/10d82106d63/ho-chi-minh-city/" data-label_1="HO CHI MINH CITY" data-label_2="WEATHER" data-theme="original" >HO CHI MINH CITY WEATHER</a>
+    <script>
+    !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+    </script>
   </header>
 
   <main class="container">
